syntax = "proto3";

package user;

option go_package = "./pb";

service UserService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);

  rpc GetCredentials (GetCredentialsRequest) returns (GetCredentialsResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string name = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1; // JWT for the frontend
  User user = 2;
}

message User {
  int64 id = 1;
  string username = 2;
  string name = 3;
}

message GetCredentialsRequest {
  int32 credential_id = 1;
}

message GetCredentialsResponse {
  string access_token = 1;
  bool success = 2;
}