syntax = "proto3";

package workflow;

option go_package = "./pb";

import "google/protobuf/timestamp.proto";

service WorkflowService {
    rpc GetWorkflows (GetWorkflowsRequest) returns (GetWorkflowsResponse);
    rpc CreateWorkflow (CreateWorkflowRequest) returns (CreateWorkflowResponse);
    rpc ActivateWorkflow (ActivateWorkflowRequest) returns (ActivateWorkflowResponse);
    rpc GetWorkflowById (GetWorkflowByIdRequest) returns (GetWorkflowByIdResponse);
}

// Data structures
message Workflow {
    int64 id = 1;
    string name = 2;
    bool is_active = 3;
    int64 user_id = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message NodeInput {
    optional string id = 1;
    string display_id = 2;
    string task_name = 3;
    string service_name = 4;
    string type = 5;
    string position = 6;
    string config = 7;
    optional int32 credentialId = 8;
}

message EdgeInput {
    optional string id = 1;
    string display_id = 2;
    string from_id = 3;
    string to_id = 4;
}

message Node {
    string id = 1;
    string display_id = 2;
    string task_name = 3;
    string service_name = 4;
    int64 workflow_id = 5;
    string type = 6;
    string position = 7;
    string config = 8;
    optional int32 credentialId = 9;
}

message Edge {
    string id = 1;
    string display_id = 2;
    string from_id = 3;
    string to_id = 4;
    int64 workflow_id = 5;
}

// Requests
message GetWorkflowsRequest {
    int64 user_id = 1;
}

message GetWorkflowsResponse {
    repeated Workflow workflows = 1;
}

message CreateWorkflowRequest {
    int64 id = 1;
    string name = 2;
    int64 user_id = 3;
    repeated NodeInput nodes = 4;
    repeated EdgeInput edges = 5;
}

message CreateWorkflowResponse {
    int64 id = 1;
}

message ActivateWorkflowRequest {
    int64 id = 1;
    bool active = 2;
}

message ActivateWorkflowResponse {
    bool success = 1;
}

message GetWorkflowByIdRequest {
    int64 id = 1;
}

message GetWorkflowByIdResponse {
    Workflow workflow = 1;
    repeated Node nodes = 2;
    repeated Edge edges = 3;
}